Update border letter-spacing and fix links across all pages

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -258,7 +258,7 @@
       font-family: $serif;
       font-size: 21px;
       line-height: 0px;
-      letter-spacing: 1.5px;
+      letter-spacing: 1px;
       text-align: center;
       color: $teal;
 
