--- a/styles/_perch.scss
+++ b/styles/_perch.scss
@@ -60,7 +60,7 @@
       font-family: $serif;
       font-size: 21px;
       line-height: 0px;
-      letter-spacing: 1.5px;
+      letter-spacing: 1px;
       text-align: center;
       color: $perch;
 
