--- a/styles/style.css
+++ b/styles/style.css
@@ -188,7 +188,7 @@ html {
     font-family: "Petrona", Georgia, serif;
     font-size: 21px;
     line-height: 0px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     text-align: center;
     color: #0FA3B1; }
     .homepage .content-container .border:last-child {
@@ -617,7 +617,7 @@ html {
     font-family: "Petrona", Georgia, serif;
     font-size: 21px;
     line-height: 0px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     text-align: center;
     color: #0FA3B1; }
     .case-studies .content-container .border:last-child {
@@ -1149,7 +1149,7 @@ html {
     font-family: "Petrona", Georgia, serif;
     font-size: 21px;
     line-height: 0px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
     text-align: center;
     color: #0FA3B1; }
     .about .content-container .border:last-child {
@@ -1503,7 +1503,7 @@ html {
   font-family: "Petrona", Georgia, serif;
   font-size: 21px;
   line-height: 0px;
-  letter-spacing: 1.5px;
+  letter-spacing: 1px;
   text-align: center;
   color: #48B3D1; }
   .perch .content-container .border:last-child {
